fix edition year blocking edition label field
not sure why these spill down like they do but this fixes it and makes the label input selectable again immediately under the year input. Probably something to do with giving tr#edition_title 60px height

--- a/darkblue/style.css
+++ b/darkblue/style.css
@@ -850,6 +850,7 @@ tr.peer_list td {
 tr#edition_expand { height: 60px !important; vertical-align: bottom }
 tr#edition_title { height: 60px !important; vertical-align: top }
 tr#catalogue_number_year > td:nth-child(3), tr#catalogue_number_year > td:nth-child(4), #edition_title > td:nth-child(3), #edition_title > td:nth-child(4) { position: relative; top: 30px; right: 480px; }
+td.ft_remasteryear { display: inline-block; }
 
 .torrent_table tr {
 	vertical-align: top;
